R0.9.6      April 28, 2017    Kukhee Kim (KHKIM)
            - decouple BSA name (uniqueue key) and BSA PV name
            
R0.9.5      April 10, 2017    Bruce Hill (bhill)
			Updated for git workflow so we can build bsaDriver for other base versions
			Note: We need to move to new version numbering scheme: major.minor.config
				where major indicates major changes to api and/or features,
				minor indicates minor src changes and/or bug fixes,
				and config indicates no src changes, just build configuration such
				as which version of asyn to build against.

R0.9.4      April 6, 2017     Kukhee Kim (KHKIM)
            - build against yamlLoader R1.0.1
R0.9.3      March 23, 2017    Kukhee Kim (KHKIM)
            - implement timestamp for BSA hsitory buffer PVs, but need to be tested....
R0.9.2      March 23, 2017    Kukhee Kim (KHKIM)
            - add up database template for BSA history buffer

R0.9.1      March 23, 2017    Kukhee Kim (KHKIM)
            - build against bsa user space api R1.0.0

R0.9.0      March 22, 2017    Kukhee Kim (KHKIM)
            - initial release
            - prepare for epics-R3.15
            - most of BSA requiredments implemented
            - mssing part is timestamp update for BSA PVs, will be implemented in next release.

March 20, 2017  Kukhe Kim (KHKIM)    Initial work for BSA driver