@@ -14,6 +14,7 @@ include $(TOP)/configure/CONFIG
 #  BSA module
 #
 DB += bsaHst.db
+DB += bsaLinearConversion.db
 DB += bsa.substitutions
 DB += bsa.db
 
